--- a/public/_header.html
+++ b/public/_header.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<header>
+    <h2><a href="#">ACME.studio</a></h2>
+    <nav>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html">Our Work</a></li>
+        <li><a href="index.html">Services</a></li>
+        <li><a href="index.html">Testimonials</a></li>
+        <li><a href="index.html">Contact</a></li>
+    </nav>
+</header>
