--- a/public/tos.html
+++ b/public/tos.html
@@ -2,9 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>ACME.studio - terms of service</title>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
+
 </head>
 <body>
+<div id="header-placeholder"></div>
+<main></main>
+<div id="footer-placeholder"></div>
+<script src="assets/scripts/main.js" type="text/javascript"></script>
 
 </body>
 </html>
