--- a/public/_header.html
+++ b/public/_header.html
@@ -1,5 +1,5 @@
 <header>
-    <h2><a href="#">ACME.studio</a></h2>
+    <h2><a href="#">FAS FIT</a></h2>
     <nav>
         <li><a href="index.html">Home</a></li>
         <li><a href="index.html">Our Work</a></li>
