--- a/public/_header.html
+++ b/public/_header.html
@@ -1,10 +1,10 @@
 <header>
     <h2><a href="#">FAS FIT</a></h2>
     <nav>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="index.html">Our Work</a></li>
-        <li><a href="index.html">Services</a></li>
-        <li><a href="index.html">Testimonials</a></li>
-        <li><a href="index.html">Contact</a></li>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="index.html">Médicos</a></li>
+        <li><a href="index.html">Servicios</a></li>
+        <li><a href="index.html">Reseñas</a></li>
+        <li><a href="index.html">Contáctanos</a></li>
     </nav>
 </header>
