--- a/public/index.html
+++ b/public/index.html
@@ -8,17 +8,90 @@
     <link rel="stylesheet" href="assets/styles/styless.css">
 
     <title>FASFIT</title>
+
 </head>
 <body>
 
 <div id="header-placeholder"></div>
 <main>
-    <section id="hero">
+    <section id="hero" class="hero">
+        <div class="background-image" style="background-image: url(assets/images/imagen_paciente.jpg);" role="img"
+             aria-label="An astronaut space walk, representing our capacity to help you achieve the highest business goals and standards"></div>
+        <h1>Disfruta una experiencia inolvidable</h1>
+        <h3>ofrecemos calidad de servicio</h3>
+        <a class="btn" href="#">Registrare Ahora</a>
+
     </section>
 
+    <section id="our-work" class="our-work">
+        <h3 class="title">Sobre Nosotros</h3>
+        <p>Hoy en día, existe una gran cantidad de personas que carecen de una ayuda psicológica
+            personal a causa del abuso sexual o bullying, por tal motivo necesitan reponer su estado
+            emocional, cognitivo y depresivo por el problema que se les presenta en el día a día.Por tal motivo
+            creamos la empresa "FastFit" para ofrecer ayuda con el desarrollo de la tecnología, de
+            manera que ofrezcamos una mayor calidad de solución en el ámbito del bienestar del
+            ser humano</p>
+        <hr>
 
+        <ul class="grid">
+            <li class="small" style="background-image: url(assets/images/iamgen_medico.jpg);" role="img"
+                aria-label="Our Team during UX Need-finding interviews"></li>
+            <li class="large" style="background-image: url(assets/images/imagen_pensamiento.png);" role="img"
+                aria-label="An Agile Planning Meeting for a Customer Project"></li>
+            <li class="large" style="background-image: url(assets/images/imagen_psicologa.jpg);" role="img"
+                aria-label="During a testing session with a user for a Restaurant Searching Wearable App"></li>
+            <li class="small" style="background-image: url(assets/images/imagen_paciente.jpg);" role="img"
+                aria-label="Some Wireframes for a news content platform, as part of our UX Design Lifecycle"></li>
+        </ul>
+    </section>
 
+    <section id="services" class="services">
+        <h3 class="title">Nuestros Servicios</h3>
+        <p>ofrecemos calidad de especialistas que desempeñan como profesionales medicos en grandes hospitales y clínicas competentes.Asimismo, cuentan
+            con conocimientos en el área de psicología, para que el cliente pueda tener una mayor
+            seguridad y confianza al momento de ser atendido por profesionales altamente calificados.</p>
+        <hr>
 
+        <ul class="grid">
+            <li>
+                <i class="fa-solid fa-mobile-screen-button"></i>
+                <h4>Apps & Experiences</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id efficitur mauris. Fusce quis tellus sit amet eros suscipit gravida. In hac habitasse platea dictumst. Pellentesque varius cursus elit et dictum. Integer non iaculis felis. Ut congue vehicula accumsan. Vestibulum eget magna vitae ligula fringilla convallis sit amet ac tortor. Etiam molestie diam finibus libero sollicitudin, sed lobortis enim aliquam.</p>
+            </li>
+            <li>
+                <i class="fa-solid fa-cubes"></i>
+                <h4>Digital Transformation</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ac sapien id dolor eleifend dapibus eget vel tellus. Morbi iaculis dolor enim, in dapibus enim commodo nec. Morbi maximus ex ut volutpat dignissim. Fusce luctus dignissim orci, sed venenatis sem tincidunt et. Proin vel dictum lacus. Aenean finibus, nisl rutrum viverra porta, diam ante dignissim est, ac sollicitudin nibh lacus in nisl. Aenean mollis ligula quis erat luctus tincidunt. Duis euismod ullamcorper aliquet. Vestibulum vitae mi ut leo porta efficitur ut ut nibh. Praesent quis tellus urna. Cras maximus enim ligula, ultrices vulputate arcu feugiat a. Nunc sit amet auctor magna. Nunc sapien sapien, efficitur vitae egestas a, laoreet nec lectus. Praesent eu laoreet quam.</p>
+            </li>
+            <li>
+                <i class="fa-solid fa-graduation-cap"></i>
+                <h4>Training & Assessment</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ut volutpat ante. Aliquam ultricies consequat tristique. Donec tortor tortor, condimentum id vehicula et, elementum ac urna. Curabitur id metus volutpat, aliquet justo non, viverra est. Nam ac ipsum nec eros congue aliquam. Vestibulum non ante lectus. Duis id ex ut dolor placerat sodales. Duis et justo rhoncus magna interdum tempor sed quis nisl. Vestibulum sem justo, finibus ut sollicitudin id, iaculis id ligula. Morbi porttitor pellentesque ex in rhoncus.</p>
+            </li>
+        </ul>
+    </section>
+
+    <section id="reviews" class="reviews">
+        <h3 class="title">Testimonials</h3>
+
+        <p class="quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sed elit maximus, fringilla turpis quis, elementum ligula. Duis rhoncus lectus id posuere fringilla. Quisque molestie urna ut ipsum hendrerit, sit amet volutpat est semper. Sed lorem dui, placerat sit amet dolor et, gravida scelerisque nunc. Morbi non dui ut sem interdum aliquam. Sed nibh arcu, ornare eu lorem a, sagittis placerat nunc. Morbi ac lobortis metus, vel convallis sem. Aenean quis dui in purus tincidunt ultricies ac nec enim.</p>
+        <p class="author">- Patrick Farrell</p>
+
+        <p class="quote">Vivamus in ipsum et diam venenatis blandit. Suspendisse condimentum enim at lorem pretium, a ultrices odio hendrerit. Sed egestas dolor quam, ac placerat sem pretium a. Suspendisse potenti. Etiam vehicula scelerisque sapien, quis pellentesque leo gravida in. Proin hendrerit lorem tortor, et sodales magna consequat ac. Mauris tempus eros diam, sit amet aliquet elit finibus sit amet. In erat enim, faucibus ac nibh quis, elementum pulvinar tortor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam erat volutpat. Phasellus non consequat nibh. Ut dignissim ac nulla vitae maximus. Nam eget ex arcu. Suspendisse erat diam, maximus nec nisl ut, bibendum sodales leo.</p>
+        <p class="author">- John Doe</p>
+
+        <p class="quote">Proin vestibulum feugiat nisi quis aliquet. Mauris pharetra velit ex, sed scelerisque nunc hendrerit a. Sed sit amet justo vitae nibh maximus sollicitudin. Fusce ac volutpat magna. Quisque venenatis leo cursus, pulvinar lacus hendrerit, mollis neque. Mauris sed lobortis orci. Nulla facilisi.</p>
+        <p class="author">- Kevin Smith</p>
+    </section>
+
+    <section id="contact" class="contact">
+        <h3 class="title">Contact Us</h3>
+        <p>Please share your email address with us. Some of our representatives will be contacting You soon.</p>
+        <hr>
+        <form>
+            <input type="email" placeholder="Email"><a class="btn" href="#">Submit</a>
+        </form>
+    </section>
 </main>
 <div id="footer-placeholder"></div>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
