--- a/public/index.html
+++ b/public/index.html
@@ -11,45 +11,68 @@
 
 </head>
 <body>
-
 <div id="header-placeholder"></div>
 <main>
     <section id="hero" class="hero">
         <div class="background-image" style="background-image: url(assets/images/imagen_paciente.jpg);" role="img"
              aria-label="An astronaut space walk, representing our capacity to help you achieve the highest business goals and standards"></div>
-        <h1>Disfruta una experiencia inolvidable</h1>
-        <h3>ofrecemos calidad de servicio</h3>
-        <a class="btn" href="#">Registrare Ahora</a>
-
+        <img src="assets/images/logos.png" alt="" width="150" height="40" />
+        <h1>Visions, Experiences, Assessments</h1>
+        <h3>We are here to help</h3>
+        <a class="btn" href="#">download the app</a>
     </section>
 
+    <footera>
+    <section id="register" class="register">
+
+        <h3 class="title">Register Now</h3>
+        <p>Please share your email address with us. Some of our representatives will be contacting You soon.</p>
+        <form>
+            <input type="Dni" placeholder="Dni"><a </a>
+            <pre> </pre>
+        </form>
+        <form>
+            <input type="Names" placeholder="Names"><a </a>
+        </form>
+        <form>
+            <pre> </pre>
+            <input type="Last Name" placeholder="Last Name"><a</a>
+        </form>
+
+        <form>
+            <pre> </pre>
+            <input type="Phone" placeholder="Phone"><a</a>
+        </form>
+        <form>
+            <pre> </pre>
+            <input type="Gmail" placeholder="Gmail">
+            <pre> </pre>
+            <a class="btn" href="#">Registrar Datos</a>
+        </form>
+
+
+    </section>
+    </footera>
+
     <section id="our-work" class="our-work">
-        <h3 class="title">Sobre Nosotros</h3>
-        <p>Hoy en día, existe una gran cantidad de personas que carecen de una ayuda psicológica
-            personal a causa del abuso sexual o bullying, por tal motivo necesitan reponer su estado
-            emocional, cognitivo y depresivo por el problema que se les presenta en el día a día.Por tal motivo
-            creamos la empresa "FastFit" para ofrecer ayuda con el desarrollo de la tecnología, de
-            manera que ofrezcamos una mayor calidad de solución en el ámbito del bienestar del
-            ser humano</p>
-        <hr>
+        <h3 class="title">Some of our work</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam euismod felis tortor, eu dictum tellus feugiat at. Praesent aliquam, quam ac lacinia suscipit, nisl ipsum posuere massa, vitae auctor orci nibh vulputate leo. Sed mollis consequat nisl eu ultrices. Phasellus aliquet ante id purus facilisis posuere. Ut et nunc eu tellus facilisis auctor. Sed tempor ac sapien sit amet convallis. Duis a rhoncus nibh. Duis lorem velit, vulputate dapibus massa ut, porta tempor metus. Ut at nunc convallis, porta odio a, porta ligula. Maecenas eget mauris arcu. Donec consectetur tortor a ultricies venenatis.</p>
 
         <ul class="grid">
-            <li class="small" style="background-image: url(assets/images/iamgen_medico.jpg);" role="img"
+            <li class="small" style="background-image: url(assets/images/adolescente.jpg);" role="img"
                 aria-label="Our Team during UX Need-finding interviews"></li>
-            <li class="large" style="background-image: url(assets/images/imagen_pensamiento.png);" role="img"
+            <li class="large" style="background-image: url(assets/images/aaa.jpg);" role="img"
                 aria-label="An Agile Planning Meeting for a Customer Project"></li>
-            <li class="large" style="background-image: url(assets/images/imagen_psicologa.jpg);" role="img"
+            <li class="large" style="background-image: url(assets/images/watch.jpg);" role="img"
                 aria-label="During a testing session with a user for a Restaurant Searching Wearable App"></li>
-            <li class="small" style="background-image: url(assets/images/imagen_paciente.jpg);" role="img"
+            <li class="small" style="background-image: url(assets/images/wireframe.jpg);" role="img"
                 aria-label="Some Wireframes for a news content platform, as part of our UX Design Lifecycle"></li>
         </ul>
     </section>
 
     <section id="services" class="services">
-        <h3 class="title">Nuestros Servicios</h3>
-        <p>ofrecemos calidad de especialistas que desempeñan como profesionales medicos en grandes hospitales y clínicas competentes.Asimismo, cuentan
-            con conocimientos en el área de psicología, para que el cliente pueda tener una mayor
-            seguridad y confianza al momento de ser atendido por profesionales altamente calificados.</p>
+        <h3 class="title">Our Services</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed imperdiet dui in eros bibendum, nec pharetra nunc rutrum. Pellentesque aliquam tellus vitae risus faucibus venenatis. Aenean bibendum massa orci, sed mattis ex lobortis quis. Nam eu lorem sit amet arcu vulputate ultrices quis non felis. Sed sed dolor imperdiet, faucibus libero sit amet, ultricies eros. Integer nec libero odio. Duis viverra velit in nibh euismod, scelerisque pretium elit cursus. Curabitur vitae velit in ante fermentum tempus.</p>
         <hr>
 
         <ul class="grid">
