--- a/public/_header.html
+++ b/public/_header.html
@@ -6,5 +6,11 @@
         <li><a href="index.html">Servicios</a></li>
         <li><a href="index.html">Reseñas</a></li>
         <li><a href="index.html">Contáctanos</a></li>
+
+        <li><a class="btn" href="">Login</a></li>
+        <li><a class="btn" href="">Register</a></li>
+
+
+
     </nav>
 </header>
