--- a/public/index.html
+++ b/public/index.html
@@ -16,13 +16,13 @@
     <section id="hero" class="hero">
         <div class="background-image" style="background-image: url(assets/images/imagen_paciente.jpg);" role="img"
              aria-label="An astronaut space walk, representing our capacity to help you achieve the highest business goals and standards"></div>
-        <img src="assets/images/logos.png" alt="" width="150" height="40" />
-        <h1>Visions, Experiences, Assessments</h1>
-        <h3>We are here to help</h3>
+
+        <h1>Locate us to feel better</h1>
+        <h3>We ensure your emotional well-being</h3>
         <a class="btn" href="#">download the app</a>
     </section>
 
-    <footera>
+    <footeru>
     <section id="register" class="register">
 
         <h3 class="title">Register Now</h3>
@@ -47,15 +47,37 @@
             <pre> </pre>
             <input type="Gmail" placeholder="Gmail">
             <pre> </pre>
-            <a class="btn" href="#">Registrar Datos</a>
+            <a class="btn" href="#">Register</a>
         </form>
 
 
     </section>
-    </footera>
+    </footeru>
 
+    <footera>
+        <section id="login" class="login">
+
+            <h3 class="title">Login Now</h3>
+            <p>Please share your email address with us. Some of our representatives will be contacting You soon.</p>
+            <form>
+                <input type="Dni" placeholder="Dni"><a </a>
+                <pre> </pre>
+            </form>
+            <form>
+                <input type="Password" placeholder="Password"><a </a>
+            </form>
+
+            <form>
+                <pre> </pre>
+                <pre> </pre>
+                <a class="btn" href="#">Login</a>
+            </form>
+
+
+        </section>
+    </footera>
     <section id="our-work" class="our-work">
-        <h3 class="title">Some of our work</h3>
+        <h3 class="title">About us</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam euismod felis tortor, eu dictum tellus feugiat at. Praesent aliquam, quam ac lacinia suscipit, nisl ipsum posuere massa, vitae auctor orci nibh vulputate leo. Sed mollis consequat nisl eu ultrices. Phasellus aliquet ante id purus facilisis posuere. Ut et nunc eu tellus facilisis auctor. Sed tempor ac sapien sit amet convallis. Duis a rhoncus nibh. Duis lorem velit, vulputate dapibus massa ut, porta tempor metus. Ut at nunc convallis, porta odio a, porta ligula. Maecenas eget mauris arcu. Donec consectetur tortor a ultricies venenatis.</p>
 
         <ul class="grid">
@@ -63,9 +85,9 @@
                 aria-label="Our Team during UX Need-finding interviews"></li>
             <li class="large" style="background-image: url(assets/images/aaa.jpg);" role="img"
                 aria-label="An Agile Planning Meeting for a Customer Project"></li>
-            <li class="large" style="background-image: url(assets/images/watch.jpg);" role="img"
+            <li class="large" style="background-image: url(assets/images/tt.jpg);" role="img"
                 aria-label="During a testing session with a user for a Restaurant Searching Wearable App"></li>
-            <li class="small" style="background-image: url(assets/images/wireframe.jpg);" role="img"
+            <li class="small" style="background-image: url(assets/images/img.png);" role="img"
                 aria-label="Some Wireframes for a news content platform, as part of our UX Design Lifecycle"></li>
         </ul>
     </section>
@@ -77,25 +99,26 @@
 
         <ul class="grid">
             <li>
-                <i class="fa-solid fa-mobile-screen-button"></i>
-                <h4>Apps & Experiences</h4>
+                <img src="assets/images/psi.jpg" alt="" width="300" height="150" />
+                <h4>Consultancy</h4>
+
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id efficitur mauris. Fusce quis tellus sit amet eros suscipit gravida. In hac habitasse platea dictumst. Pellentesque varius cursus elit et dictum. Integer non iaculis felis. Ut congue vehicula accumsan. Vestibulum eget magna vitae ligula fringilla convallis sit amet ac tortor. Etiam molestie diam finibus libero sollicitudin, sed lobortis enim aliquam.</p>
             </li>
             <li>
-                <i class="fa-solid fa-cubes"></i>
-                <h4>Digital Transformation</h4>
+                <img src="assets/images/ASISTENCIA.jpg" alt="" width="300" height="150" />
+                <h4>Psychological assistance</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ac sapien id dolor eleifend dapibus eget vel tellus. Morbi iaculis dolor enim, in dapibus enim commodo nec. Morbi maximus ex ut volutpat dignissim. Fusce luctus dignissim orci, sed venenatis sem tincidunt et. Proin vel dictum lacus. Aenean finibus, nisl rutrum viverra porta, diam ante dignissim est, ac sollicitudin nibh lacus in nisl. Aenean mollis ligula quis erat luctus tincidunt. Duis euismod ullamcorper aliquet. Vestibulum vitae mi ut leo porta efficitur ut ut nibh. Praesent quis tellus urna. Cras maximus enim ligula, ultrices vulputate arcu feugiat a. Nunc sit amet auctor magna. Nunc sapien sapien, efficitur vitae egestas a, laoreet nec lectus. Praesent eu laoreet quam.</p>
             </li>
             <li>
-                <i class="fa-solid fa-graduation-cap"></i>
-                <h4>Training & Assessment</h4>
+                <img src="assets/images/trata.jpg" alt="" width="300" height="150" />
+                <h4>Treatment</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ut volutpat ante. Aliquam ultricies consequat tristique. Donec tortor tortor, condimentum id vehicula et, elementum ac urna. Curabitur id metus volutpat, aliquet justo non, viverra est. Nam ac ipsum nec eros congue aliquam. Vestibulum non ante lectus. Duis id ex ut dolor placerat sodales. Duis et justo rhoncus magna interdum tempor sed quis nisl. Vestibulum sem justo, finibus ut sollicitudin id, iaculis id ligula. Morbi porttitor pellentesque ex in rhoncus.</p>
             </li>
         </ul>
     </section>
 
     <section id="reviews" class="reviews">
-        <h3 class="title">Testimonials</h3>
+        <h3 class="title">Reviews</h3>
 
         <p class="quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sed elit maximus, fringilla turpis quis, elementum ligula. Duis rhoncus lectus id posuere fringilla. Quisque molestie urna ut ipsum hendrerit, sit amet volutpat est semper. Sed lorem dui, placerat sit amet dolor et, gravida scelerisque nunc. Morbi non dui ut sem interdum aliquam. Sed nibh arcu, ornare eu lorem a, sagittis placerat nunc. Morbi ac lobortis metus, vel convallis sem. Aenean quis dui in purus tincidunt ultricies ac nec enim.</p>
         <p class="author">- Patrick Farrell</p>
@@ -107,13 +130,53 @@
         <p class="author">- Kevin Smith</p>
     </section>
 
+    <section id="doctors" class="doctors">
+        <h3 class="title">Doctors</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed imperdiet dui in eros bibendum, nec pharetra nunc rutrum. Pellentesque aliquam tellus vitae risus faucibus venenatis. Aenean bibendum massa orci, sed mattis ex lobortis quis. Nam eu lorem sit amet arcu vulputate ultrices quis non felis. Sed sed dolor imperdiet, faucibus libero sit amet, ultricies eros. Integer nec libero odio. Duis viverra velit in nibh euismod, scelerisque pretium elit cursus. Curabitur vitae velit in ante fermentum tempus.</p>
+        <hr>
+
+        <ul class="grid">
+            <li>
+                <img src="assets/images/psi.jpg" alt="" width="300" height="150" />
+                <h4>Alexander Fleming Contreras</h4>
+
+                <p>Especialidad: Psicologo</p>
+                <p>Edad        : 22 años</p>
+                <p>Nacionality: Peruana</p>
+            </li>
+            <li>
+                <img src="assets/images/ASISTENCIA.jpg" alt="" width="300" height="150" />
+                <h4>Jorge Mayta Delgado</h4>
+                <p>Especialidad: Psicologo</p>
+                <p>Edad        : 22 años</p>
+                <p>Nacionality: Peruana</p>
+            </li>
+            <li>
+                <img src="assets/images/trata.jpg" alt="" width="300" height="150" />
+                <h4>Sebastian Castro Soto</h4>
+                <p>Especialidad: Psicologo</p>
+                <p>Edad        : 22 años</p>
+                <p>Nacionality: Peruana</p>
+
+            </li>
+        </ul>
+    </section>
+
     <section id="contact" class="contact">
         <h3 class="title">Contact Us</h3>
-        <p>Please share your email address with us. Some of our representatives will be contacting You soon.</p>
+        <p>Our company seeks to create a technological application that allows us to connect
+            quickly and effectively to users who need psychological help, so that
+            so they can receive immediate help from expert psychologists in their area and
+            highly qualified.</p>
         <hr>
         <form>
             <input type="email" placeholder="Email"><a class="btn" href="#">Submit</a>
         </form>
+        <pre> </pre>
+        <pre> </pre>
+        <pre> </pre>
+        <img src="assets/images/logos.png" alt="" width="150" height="40" />
+        <hr>
     </section>
 </main>
 <div id="footer-placeholder"></div>
