--- a/public/_header.html
+++ b/public/_header.html
@@ -1,11 +1,12 @@
 <header>
-    <h2><a href="#">FAS FIT</a></h2>
+    <img src="assets/images/logos.png" alt="" width="150" height="40" />
     <nav>
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="index.html">Médicos</a></li>
-        <li><a href="index.html">Servicios</a></li>
-        <li><a href="index.html">Reseñas</a></li>
-        <li><a href="index.html">Contáctanos</a></li>
+
+        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html">Doctors</a></li>
+        <li><a href="index.html">Services</a></li>
+        <li><a href="index.html">Reviews</a></li>
+        <li><a href="index.html">Contact Us</a></li>
 
         <li><a class="btn" href="">Login</a></li>
         <li><a class="btn" href="">Register</a></li>
@@ -14,3 +15,4 @@
 
     </nav>
 </header>
+
