--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     <section id="register" class="register">
 
         <h3 class="title">Register Now</h3>
-        <p>Please share your email address with us. Some of our representatives will be contacting You soon.</p>
+        <p>Please share your corresponding information that is requested in order to register it efficiently.</p>
         <form>
             <input type="Dni" placeholder="Dni"><a </a>
             <pre> </pre>
@@ -45,6 +45,11 @@
         </form>
         <form>
             <pre> </pre>
+            <input type="New Password" placeholder="New Password">
+
+        </form>
+        <form>
+            <pre> </pre>
             <input type="Gmail" placeholder="Gmail">
             <pre> </pre>
             <a class="btn" href="#">Register</a>
@@ -58,7 +63,7 @@
         <section id="login" class="login">
 
             <h3 class="title">Login Now</h3>
-            <p>Please share your email address with us. Some of our representatives will be contacting You soon.</p>
+            <p>Please share your corresponding information that is requested to log in efficiently.</p>
             <form>
                 <input type="Dni" placeholder="Dni"><a </a>
                 <pre> </pre>
@@ -78,7 +83,7 @@
     </footera>
     <section id="our-work" class="our-work">
         <h3 class="title">About us</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam euismod felis tortor, eu dictum tellus feugiat at. Praesent aliquam, quam ac lacinia suscipit, nisl ipsum posuere massa, vitae auctor orci nibh vulputate leo. Sed mollis consequat nisl eu ultrices. Phasellus aliquet ante id purus facilisis posuere. Ut et nunc eu tellus facilisis auctor. Sed tempor ac sapien sit amet convallis. Duis a rhoncus nibh. Duis lorem velit, vulputate dapibus massa ut, porta tempor metus. Ut at nunc convallis, porta odio a, porta ligula. Maecenas eget mauris arcu. Donec consectetur tortor a ultricies venenatis.</p>
+        <p>The company was born when the corresponding need for sexual harassment or bullying towards women by people who are not aware of the damage they do was found. For this reason, our goal is to provide effective solutions to users who seek specialized psychological support through their mobile applications, managing to reduce the large percentage of people who suffer from social problems in Peru, for a better future at the national level.</p>
 
         <ul class="grid">
             <li class="small" style="background-image: url(assets/images/adolescente.jpg);" role="img"
@@ -93,8 +98,8 @@
     </section>
 
     <section id="services" class="services">
-        <h3 class="title">Our Services</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed imperdiet dui in eros bibendum, nec pharetra nunc rutrum. Pellentesque aliquam tellus vitae risus faucibus venenatis. Aenean bibendum massa orci, sed mattis ex lobortis quis. Nam eu lorem sit amet arcu vulputate ultrices quis non felis. Sed sed dolor imperdiet, faucibus libero sit amet, ultricies eros. Integer nec libero odio. Duis viverra velit in nibh euismod, scelerisque pretium elit cursus. Curabitur vitae velit in ante fermentum tempus.</p>
+        <h3 class="title">Our Patient services</h3>
+        <p>Our company provides various services for users who want to interact with the application design. Likewise, one of the important tasks is also to recommend health professionals to other users because most of them offer false information. Finally, the important task is to find the right platform that offers all these service options so that you can opt for them and receive emotional help from them.</p>
         <hr>
 
         <ul class="grid">
@@ -102,63 +107,90 @@
                 <img src="assets/images/psi.jpg" alt="" width="300" height="150" />
                 <h4>Consultancy</h4>
 
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id efficitur mauris. Fusce quis tellus sit amet eros suscipit gravida. In hac habitasse platea dictumst. Pellentesque varius cursus elit et dictum. Integer non iaculis felis. Ut congue vehicula accumsan. Vestibulum eget magna vitae ligula fringilla convallis sit amet ac tortor. Etiam molestie diam finibus libero sollicitudin, sed lobortis enim aliquam.</p>
+                <p>In this consultation service it will be for users who wish to interact with the design of the application. Likewise, one of the important tasks is also to recommend health professionals to other users because most of them offer false information. Finally, the important task is to find the right platform that offers all these service options so that you can opt for them and receive emotional help from them.</p>
             </li>
             <li>
                 <img src="assets/images/ASISTENCIA.jpg" alt="" width="300" height="150" />
                 <h4>Psychological assistance</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ac sapien id dolor eleifend dapibus eget vel tellus. Morbi iaculis dolor enim, in dapibus enim commodo nec. Morbi maximus ex ut volutpat dignissim. Fusce luctus dignissim orci, sed venenatis sem tincidunt et. Proin vel dictum lacus. Aenean finibus, nisl rutrum viverra porta, diam ante dignissim est, ac sollicitudin nibh lacus in nisl. Aenean mollis ligula quis erat luctus tincidunt. Duis euismod ullamcorper aliquet. Vestibulum vitae mi ut leo porta efficitur ut ut nibh. Praesent quis tellus urna. Cras maximus enim ligula, ultrices vulputate arcu feugiat a. Nunc sit amet auctor magna. Nunc sapien sapien, efficitur vitae egestas a, laoreet nec lectus. Praesent eu laoreet quam.</p>
+                <p>In this psychological assistance service it will be for users who wish to interact with the design of the application. Likewise, one of the important tasks is also to recommend health professionals to other users because most of them offer false information. Finally, the important task is to find the right platform that offers all these service options so that you can opt for them and receive emotional help from them.</p>
             </li>
             <li>
                 <img src="assets/images/trata.jpg" alt="" width="300" height="150" />
                 <h4>Treatment</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ut volutpat ante. Aliquam ultricies consequat tristique. Donec tortor tortor, condimentum id vehicula et, elementum ac urna. Curabitur id metus volutpat, aliquet justo non, viverra est. Nam ac ipsum nec eros congue aliquam. Vestibulum non ante lectus. Duis id ex ut dolor placerat sodales. Duis et justo rhoncus magna interdum tempor sed quis nisl. Vestibulum sem justo, finibus ut sollicitudin id, iaculis id ligula. Morbi porttitor pellentesque ex in rhoncus.</p>
+                <p>In this treatment service it will be for users who wish to interact with the design of the application. Likewise, one of the important tasks is also to recommend health professionals to other users because most of them offer false information. Finally, the important task is to find the right platform that offers all these service options so that you can opt for them and receive emotional help from them.</p>
+            </li>
+        </ul>
+    </section>
+    <section id="services2" class="services2">
+        <h3 class="title">Our services for psychologists</h3>
+        <p>Our company provides various services for psychologists who want to interact with the application design. Likewise, one of the important tasks is also to recommend health professionals to other users because most of them offer false information. Finally, the important task is to find the right platform that offers all these service options so that you can opt for them and receive emotional help from them.</p>
+        <hr>
+
+        <ul class="grid">
+            <li>
+                <img src="assets/images/go1.webp" alt="" width="300" height="150" />
+                <h4>Pay by appointment</h4>
+
+                <p>In this consultation service it will be for users who wish to interact with the design of the application. Likewise, one of the important tasks is also to recommend health professionals to other users because most of them offer false information. Finally, the important task is to find the right platform that offers all these service options so that you can opt for them and receive emotional help from them.</p>
+            </li>
+            <li>
+                <img src="assets/images/go2.jpg" alt="" width="300" height="150" />
+                <h4>Payment for treatments</h4>
+                <p>In this psychological assistance service it will be for users who wish to interact with the design of the application. Likewise, one of the important tasks is also to recommend health professionals to other users because most of them offer false information. Finally, the important task is to find the right platform that offers all these service options so that you can opt for them and receive emotional help from them.</p>
+            </li>
+            <li>
+                <img src="assets/images/go3.jpg" alt="" width="300" height="150" />
+                <h4>Patient history</h4>
+                <p>In this treatment service it will be for users who wish to interact with the design of the application. Likewise, one of the important tasks is also to recommend health professionals to other users because most of them offer false information. Finally, the important task is to find the right platform that offers all these service options so that you can opt for them and receive emotional help from them.</p>
             </li>
         </ul>
     </section>
 
     <section id="reviews" class="reviews">
         <h3 class="title">Reviews</h3>
-
-        <p class="quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sed elit maximus, fringilla turpis quis, elementum ligula. Duis rhoncus lectus id posuere fringilla. Quisque molestie urna ut ipsum hendrerit, sit amet volutpat est semper. Sed lorem dui, placerat sit amet dolor et, gravida scelerisque nunc. Morbi non dui ut sem interdum aliquam. Sed nibh arcu, ornare eu lorem a, sagittis placerat nunc. Morbi ac lobortis metus, vel convallis sem. Aenean quis dui in purus tincidunt ultricies ac nec enim.</p>
-        <p class="author">- Patrick Farrell</p>
-
-        <p class="quote">Vivamus in ipsum et diam venenatis blandit. Suspendisse condimentum enim at lorem pretium, a ultrices odio hendrerit. Sed egestas dolor quam, ac placerat sem pretium a. Suspendisse potenti. Etiam vehicula scelerisque sapien, quis pellentesque leo gravida in. Proin hendrerit lorem tortor, et sodales magna consequat ac. Mauris tempus eros diam, sit amet aliquet elit finibus sit amet. In erat enim, faucibus ac nibh quis, elementum pulvinar tortor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam erat volutpat. Phasellus non consequat nibh. Ut dignissim ac nulla vitae maximus. Nam eget ex arcu. Suspendisse erat diam, maximus nec nisl ut, bibendum sodales leo.</p>
-        <p class="author">- John Doe</p>
-
-        <p class="quote">Proin vestibulum feugiat nisi quis aliquet. Mauris pharetra velit ex, sed scelerisque nunc hendrerit a. Sed sit amet justo vitae nibh maximus sollicitudin. Fusce ac volutpat magna. Quisque venenatis leo cursus, pulvinar lacus hendrerit, mollis neque. Mauris sed lobortis orci. Nulla facilisi.</p>
-        <p class="author">- Kevin Smith</p>
+        <img src="assets/images/p1.jpg" alt="" width="300" height="300" />
+        <p class="quote">well, regarding the application, it is noted that they offer quality of service at the time of installing and providing us with all the corresponding tools. Likewise, the specialists who attend us are of high quality since they have gifted knowledge, who solve your problem effectively for a process of improvement of us who are the patients. Even the interface offered by the application is intuitive in the field of design, also the buttons that are seen are related and pleasant for any user who enters this application constantly or from time to time.</p>
+        <p class="author">- Melissa Farrell Contreras</p>
+        <hr>
+        <img src="assets/images/p2.jpg" alt="" width="300" height="300" />
+        <p class="quote">well, regarding the application, it is noted that they offer quality of service at the time of installing and providing us with all the corresponding tools. Likewise, the specialists who attend us are of high quality since they have gifted knowledge, who solve your problem effectively for a process of improvement of us who are the patients. Even the interface offered by the application is intuitive in the field of design, also the buttons that are seen are related and pleasant for any user who enters this application constantly or from time to time.</p>
+        <p class="author">- Maria Doe Salazar</p>
+        <hr>
+        <img src="assets/images/p123.jpg" alt="" width="300" height="300" />
+        <p class="quote">well, regarding the application, it is noted that they offer quality of service at the time of installing and providing us with all the corresponding tools. Likewise, the specialists who attend us are of high quality since they have gifted knowledge, who solve your problem effectively for a process of improvement of us who are the patients. Even the interface offered by the application is intuitive in the field of design, also the buttons that are seen are related and pleasant for any user who enters this application constantly or from time to time.</p>
+        <p class="author">- Jorge Smith Huamani</p>
     </section>
 
     <section id="doctors" class="doctors">
         <h3 class="title">Doctors</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed imperdiet dui in eros bibendum, nec pharetra nunc rutrum. Pellentesque aliquam tellus vitae risus faucibus venenatis. Aenean bibendum massa orci, sed mattis ex lobortis quis. Nam eu lorem sit amet arcu vulputate ultrices quis non felis. Sed sed dolor imperdiet, faucibus libero sit amet, ultricies eros. Integer nec libero odio. Duis viverra velit in nibh euismod, scelerisque pretium elit cursus. Curabitur vitae velit in ante fermentum tempus.</p>
+        <p>In this phase we will provide the list of specialists for the future scenario, which are when the specialist needs to provide his service as a professional and for that he first finds the company where there is an efficient application, then the professional tries to attract customers with the quality of service that will be offered during a set time. For an effective solution with the application that will be developed in the world of technology with a purpose that helps the future development of the world in a way that solves short and long-term problems according to how the patient's recovery process goes.</p>
         <hr>
 
         <ul class="grid">
             <li>
-                <img src="assets/images/psi.jpg" alt="" width="300" height="150" />
+                <img src="assets/images/psi1.png" alt="" width="300" height="300" />
                 <h4>Alexander Fleming Contreras</h4>
 
                 <p>Especialidad: Psicologo</p>
                 <p>Edad        : 22 años</p>
-                <p>Nacionality: Peruana</p>
+                <p>Nacionality : Peruana</p>
             </li>
             <li>
-                <img src="assets/images/ASISTENCIA.jpg" alt="" width="300" height="150" />
+                <img src="assets/images/psi2.png" alt="" width="300" height="300" />
                 <h4>Jorge Mayta Delgado</h4>
                 <p>Especialidad: Psicologo</p>
                 <p>Edad        : 22 años</p>
                 <p>Nacionality: Peruana</p>
             </li>
             <li>
-                <img src="assets/images/trata.jpg" alt="" width="300" height="150" />
+                <img src="assets/images/psi3.png" alt="" width="300" height="300" />
                 <h4>Sebastian Castro Soto</h4>
                 <p>Especialidad: Psicologo</p>
                 <p>Edad        : 22 años</p>
                 <p>Nacionality: Peruana</p>
 
             </li>
+
         </ul>
     </section>
 
@@ -176,7 +208,7 @@
         <pre> </pre>
         <pre> </pre>
         <img src="assets/images/logos.png" alt="" width="150" height="40" />
-        <hr>
+
     </section>
 </main>
 <div id="footer-placeholder"></div>
