--- a/public/index.html
+++ b/public/index.html
@@ -179,7 +179,7 @@
                 <img src="assets/images/psi2.png" alt="" width="300" height="300" />
                 <h4>Jorge Mayta Delgado</h4>
                 <p>Especialidad: Psicologo</p>
-                <p>Edad        : 22 años</p>
+                <p>Edad        : 22 years</p>
                 <p>Nacionality: Peruana</p>
             </li>
             <li>
