--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="ACME.studio official Landing Page site">
     <meta name="keywords" content="UX, Strategy, Digital transformation, Apps, Consulting, Software Development">
-    <link rel="stylesheet" href="assets/styles/styless.css">
+    <link rel="stylesheet" href="assets/styles/styles.css">
 
     <title>FASFIT</title>
 
