feat(master):Added master content.

--- a/public/index.html
+++ b/public/index.html
@@ -198,7 +198,7 @@
         <h3 class="title">Contact Us</h3>
         <p>Our company seeks to create a technological application that allows us to connect
             quickly and effectively to users who need psychological help, so that
-            so they can receive immediate help from expert psychologists in their area and
+            soy they can receive immediate help from expert psychologists in their area and
             highly qualified.</p>
         <hr>
         <form>
