feat(servicios):Added servicios content.

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,24 @@
     <link rel="stylesheet" href="assets/styles/styles.css">
 
     <title>FASFIT</title>
+    <header>
+        <img src="assets/images/logos.png" alt="" width="310" height="130" />
+        <nav>
+
+            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html">Doctors</a></li>
+            <li><a href="index.html">Services</a></li>
+            <li><a href="index.html">Reviews</a></li>
+            <li><a href="index.html">Contact Us</a></li>
+
+            <li><a class="btn" href="">Login</a></li>
+            <li><a class="btn" href="">Register</a></li>
+
+
+
+        </nav>
+    </header>
+
 
 </head>
 <body>
