--- a/public/_header.html
+++ b/public/_header.html
@@ -2,14 +2,14 @@
     <img src="assets/images/logos.png" alt="" width="310" height="130" />
     <nav>
 
-        <li><a href="index.html">Home</a></li>
-        <li><a href="index.html">Doctors</a></li>
-        <li><a href="index.html">Services</a></li>
-        <li><a href="index.html">Reviews</a></li>
-        <li><a href="index.html">Contact Us</a></li>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#doctors">Doctors</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#reviews">Reviews</a></li>
+        <li><a href="#contact">Contact Us</a></li>
 
-        <li><a class="btn" href="">Login</a></li>
-        <li><a class="btn" href="">Register</a></li>
+        <li><a class="btn" href="#login">Login</a></li>
+        <li><a class="btn" href="#register">Register</a></li>
 
 
 
