--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,23 @@
     <link rel="stylesheet" href="assets/styles/styles.css">
 
     <title>FASFIT</title>
+    <header>
+        <img src="assets/images/logos.png" alt="" width="310" height="130" />
+        <nav>
 
+            <li><a href="#home">Home</a></li>
+            <li><a href="#doctors">Doctors</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#reviews">Reviews</a></li>
+            <li><a href="#contact">Contact Us</a></li>
+
+            <li><a class="btn" href="#login">Login</a></li>
+            <li><a class="btn" href="#register">Register</a></li>
+
+
+
+        </nav>
+    </header>
 
 </head>
 <body>
