--- a/public/_header.html
+++ b/public/_header.html
@@ -1,1 +1,17 @@
+<header>
+    <a title="Los Tejos" href="https://www.clinicainternacional.com.pe/"> <img src="assets/images/logos.png" alt="Los Tejos" width="310" height="130" /></a>
+    <nav>
 
+        <li><a href="#home">Home</a></li>
+        <li><a href="#doctors">Doctors</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#reviews">Reviews</a></li>
+        <li><a href="#contact">Contact Us</a></li>
+
+        <li><a class="btn" href="#login">Login</a></li>
+        <li><a class="btn" href="#register">Register</a></li>
+
+
+
+    </nav>
+</header>
