--- a/public/index.html
+++ b/public/index.html
@@ -5,36 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="ACME.studio official Landing Page site">
     <meta name="keywords" content="UX, Strategy, Digital transformation, Apps, Consulting, Software Development">
+<link href="https://fonts.googleapis.com/css?family=Poppins" rel="Stylesheet">
     <link rel="stylesheet" href="assets/styles/styles.css">
 
     <title>FASFIT</title>
-    <header>
-        <img src="assets/images/logos.png" alt="" width="310" height="130" />
-        <nav>
 
-            <li><a href="#home">Home</a></li>
-            <li><a href="#doctors">Doctors</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#reviews">Reviews</a></li>
-            <li><a href="#contact">Contact Us</a></li>
-
-            <li><a class="btn" href="#login">Login</a></li>
-            <li><a class="btn" href="#register">Register</a></li>
-
-
-
-        </nav>
-    </header>
 
 </head>
 <body>
 <div id="header-placeholder"></div>
 <main>
     <section id="hero" class="hero">
-        <div class="background-image" style="background-image: url(assets/images/imagen_paciente.jpg);" role="img"
+        <div class="background-image" style="background-image: url(assets/images/imagen_paciente.jpg);" role="img" ></div>
 
 
-        <h1>Locate us to feel better</h1>
+        <h1>Locate us to feel betterr</h1>
         <h3>We ensure your emotional well-being</h3>
         <a class="btn" href="#">download the app</a>
     </section>
