--- a/public/_footer.html
+++ b/public/_footer.html
@@ -5,7 +5,7 @@
         <li><a role="link" href="#"><i class="fa-brands fa-instagram-square"></i></a></li>
         <li><a role="link" href="#"><i class="fa-brands fa-youtube-square"></i></a></li>
         <li><a role="link" href="#"><i class="fa-brands fa-github-square"></i></a></li>
-        <li><a role="link" href="#"><i class="fa-brands fa-google-square"></i></a></li>
+        <li><a role="link" href="#"><i class="fa-brands fa-linkedin"></i></a></li>
 
 
 
