--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,23 @@
 
 </head>
 <body>
-<div id="header-placeholder"></div>
+<header>
+    <a title="Los Tejos" href="https://www.clinicainternacional.com.pe/"> <img src="assets/images/logos.png" alt="Los Tejos" width="310" height="130" /></a>
+    <nav>
+
+        <li><a href="#home">Home</a></li>
+        <li><a href="#doctors">Doctors</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#reviews">Reviews</a></li>
+        <li><a href="#contact">Contact Us</a></li>
+
+        <li><a class="btn" href="#login">Login</a></li>
+        <li><a class="btn" href="#register">Register</a></li>
+
+
+
+    </nav>
+</header>
 <main>
     <section id="hero" class="hero">
         <div class="background-image" style="background-image: url(assets/images/imagen_paciente.jpg);" role="img" ></div>
@@ -212,7 +228,30 @@
 
     </section>
 </main>
-<div id="footer-placeholder"></div>
+<footer>
+    <ul>
+        <li><a role="link" href="#"><i class="fa-brands fa-twitter-square"></i></a></li>
+        <li><a role="link" href="#"><i class="fa-brands fa-facebook-square"></i></a></li>
+        <li><a role="link" href="#"><i class="fa-brands fa-instagram-square"></i></a></li>
+        <li><a role="link" href="#"><i class="fa-brands fa-youtube-square"></i></a></li>
+        <li><a role="link" href="#"><i class="fa-brands fa-github-square"></i></a></li>
+        <li><a role="link" href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+
+
+
+    </ul>
+    <p>Made by ACME.studio. Images courtesy of <a role="link" href="https://pexels.com" target="_blank"> Pexels </a>.</p>
+    <p><a href="tos.html">Terms of service</a>.</p>
+
+    <pre> </pre>
+
+    <p>Attention schedule <a role="link" href="https://pexels.com" target="_blank"> 8:00 a 8:00 pm </a>.</p>
+    <pre> </pre>
+    <p>Telephone system <a role="link" href="https://pexels.com" target="_blank"> +51 917081456 </a>.</p>
+    <pre> </pre>
+    <p><a href="tos.html">Copyright 2022 - FASFIT. Todos los derechos reservados.</a>.</p>
+
+</footer>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script src="assets/scripts/main.js" type="text/javascript"></script>
 
